# EventFlow

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_users.py  003_orders_inventory.py  004_payments_shipments.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: __init__.py  auth.py  inventory.py  orders.py  users.py
backend/app/consumers/: __init__.py  main.py
backend/app/core/: config.py  constants.py  database.py  exceptions.py  idempotency.py  logging.py  pagination.py  redis.py  security.py
backend/app/messaging/: __init__.py  commands.py  consumers.py  kafka.py  producers.py  rabbitmq.py
backend/app/models/: __init__.py  base.py  inventory.py  order.py  payment.py  shipping.py  user.py
backend/app/repositories/: inventory.py  orders.py  payments.py  shipping.py  users.py
backend/app/schemas/: auth.py  common.py  inventory.py  order.py  user.py
backend/app/seed/: seed_demo_data.py
backend/app/services/: auth_service.py  inventory_service.py  order_service.py  payment_service.py  shipping_service.py
backend/app/tests/: conftest.py  test_auth.py  test_health.py  test_orders.py  test_workflows.py
backend/app/workers/: inventory_worker.py  main.py  notification_worker.py  payment_worker.py  shipping_worker.py
frontend/: package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  (+2 more)
(+39 files in other folders)
